Bug 311263 - "Vary the background color for each tab" option broken
Summary: "Vary the background color for each tab" option broken
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9.4
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-06 18:26 UTC by Ragnar Thomsen
Modified: 2018-11-22 15:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ragnar Thomsen 2012-12-06 18:26:47 UTC
Checking the option "Vary the background color for each tab" doesn't have any effect on the background color of tabs. I have tried using different color themes. All tabs have the same background color.

Reproducible: Always

Steps to Reproduce:
1. Go to: Settings -> Edit Current Profile -> Appearance -> Edit
2. Check the checkbox: "Vary the background color for each tab" and press OK
3. Open a new tab
Actual Results:  
Newly started tabs have the same background color.

Expected Results:  
Each tab should have a different background color.
Comment 1 Kurt Hindenburg 2012-12-07 02:48:44 UTC
The 'random on light colors' scheme works as expected.   However, if you take another scheme and click on the 'random background color' it does not work.  I'm actually not sure it ever worked.
Comment 2 David Heidelberg 2014-03-05 01:25:43 UTC
I can confirm this issue on dark background.
Comment 3 David Heidelberg 2014-03-05 01:30:22 UTC
Exactly, it doesn't work for BLACK. If it's at least #141414, it's fine. Maybe it could force this value, if is set black
Comment 4 Kurt Hindenburg 2018-11-22 15:13:16 UTC
Git commit 72368b71e29a40ee27aa9439432f0e764a4322ed by Kurt Hindenburg, on behalf of Andrew Smith.
Committed on 22/11/2018 at 15:13.
Pushed by hindenburg into branch 'master'.

Allow small colour changes when varying dark backgrounds

Summary:
Black backgrounds don't get a (visible) random colour if "Vary the
background colour" has been checked. This is because the only
changes currently made aren't visible if the colour is black. Instead,
if we get a black background allow a small change in the colour
value so that the randomized colour is noticeable.
FIXED-IN: 18.12

Test Plan:
Create a new profile with a black background and the "Vary the
background colour" option checked. Opening new tabs with this
profile should produce tabs with slightly different background colours.

Reviewers: #konsole, konsole-devel, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: #konsole, konsole-devel

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D17045

M  +9    -1    src/ColorScheme.cpp

https://commits.kde.org/konsole/72368b71e29a40ee27aa9439432f0e764a4322ed
Comment 5 Kurt Hindenburg 2018-11-22 15:14:27 UTC
Git commit 25ec27819055299c417fbd0373b757646336497e by Kurt Hindenburg, on behalf of Andrew Smith.
Committed on 22/11/2018 at 15:14.
Pushed by hindenburg into branch 'Applications/18.12'.

Allow small colour changes when varying dark backgrounds

Summary:
Black backgrounds don't get a (visible) random colour if "Vary the
background colour" has been checked. This is because the only
changes currently made aren't visible if the colour is black. Instead,
if we get a black background allow a small change in the colour
value so that the randomized colour is noticeable.
FIXED-IN: 18.12

Test Plan:
Create a new profile with a black background and the "Vary the
background colour" option checked. Opening new tabs with this
profile should produce tabs with slightly different background colours.

Reviewers: #konsole, konsole-devel, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: #konsole, konsole-devel

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D17045

(cherry picked from commit 72368b71e29a40ee27aa9439432f0e764a4322ed)

M  +9    -1    src/ColorScheme.cpp

https://commits.kde.org/konsole/25ec27819055299c417fbd0373b757646336497e